force-app/main/default/objects/EMS_EM_Benefits__c/EMS_EM_Benefits__c.object-meta.xml
<CustomObject>
    <label>Benefits</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>