force-app/main/default/objects/EMS_EM_Benefits__c/fields/EMS_EM_Membership_No__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Membership_No__c</fullName>
    <label>Membership ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>