force-app/main/default/objects/EMS_EM_Benefits__c/fields/EMS_EM_Nominee__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Nominee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Beneficiary Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Benefits</relationshipLabel>
    <relationshipName>Benefits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>