force-app/main/default/objects/EMS_EM_Benefits__c/fields/EMS_EM_Relationship__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Relationship__c</fullName>
    <label>Relationship to Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>