force-app/main/default/objects/EMS_EM_Benefits__c/fields/EMS_EM_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Valid_From__c</fullName>
    <label>Valid From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>