force-app/main/default/objects/EMS_EM_Benefits__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical Insurence</fullName>
                <label>Medical Insurance</label>
            </value>
            <value>
                <fullName>PF</fullName>
            </value>
            <value>
                <fullName>Phone Expense</fullName>
                <label>Phone Expenses</label>
            </value>
            <value>
                <fullName>Internet Bills</fullName>
            </value>
            <value>
                <fullName>Petrol and Gas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>